<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_background"
    android:orientation="vertical"
    tools:context=".DetailShoeKotlinActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_gradient"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/image_detail_shoe_photo"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@+id/toolbar_detail"
        android:background="@drawable/background_gradient"
        android:contentDescription="@string/all_shoes_photo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_detail_shoe_photo"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp">

        <TextView
            android:id="@+id/text_detail_shoe_name"
            style="@style/TextViewStyle.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_shoes_name" />

        <TextView
            android:id="@+id/text_detail_shoe_category"
            style="@style/TextViewStyle.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/all_shoes_category" />

        <TextView
            android:id="@+id/text_detail_shoe_price"
            style="@style/TextViewStyle.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/all_shoes_price"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/text_detail_shoe_description"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/all_shoes_description" />

    </LinearLayout>

    <Button
        android:id="@+id/button_detail_buy_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:layout_marginBottom="@dimen/margin_4dp"
        android:background="@drawable/background_gradient"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato_bold"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/detail_buy_now"
        android:textColor="@color/white" />

</RelativeLayout>