<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginStart="@dimen/padding_8dp"
    android:layout_marginTop="@dimen/padding_8dp"
    android:layout_marginEnd="@dimen/padding_8dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    android:padding="@dimen/padding_8dp"
    app:cardCornerRadius="@dimen/corner_8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/padding_8dp"
        android:weightSum="5">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/background_rounded"
            android:contentDescription="@string/all_shoes_photo"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:paddingBottom="@dimen/padding_8dp">

            <TextView
                android:id="@+id/text_item_shoe_name"
                style="@style/TextViewStyle.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/all_shoes_name" />

            <TextView
                android:id="@+id/text_item_shoe_category"
                style="@style/TextViewStyle.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_item_shoe_name"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/all_shoes_category" />

            <TextView
                android:id="@+id/text_item_shoe_price"
                style="@style/TextViewStyle.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/all_shoes_price"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>